Finally fixed the rendering issue on mobile. Also fixed the search bar to be centered on mobile

--- a/src/global.css
+++ b/src/global.css
@@ -26,6 +26,11 @@
     font-style: normal;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+}
+
 :root {
     font-family: 'Nunito';
     --font-clr: #7A7A7A;
@@ -54,13 +59,9 @@
 
     --box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 
-    margin: 0;
-    padding: 0;
 }
 
 body {
-    margin: 0;
-    padding: 0;
     width: 100vw;
     height: 100vh;
 }
@@ -70,7 +71,7 @@ body {
 }
 
 .sr-only {
-    display: none;
+    display: none !important;
 }
 
 @keyframes fade-in {
